[package]
name = "sml-statics-types"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
test = false
doctest = false

[dependencies]
code-h2-md-map.workspace = true
drop_bomb = "0.1"
fast-hash.workspace = true
fmt-util.workspace = true
idx.workspace = true
once_cell = "1"
paths.workspace = true
chain-map.path = "../chain-map"
cov-mark.path = "../cov-mark"
sml-hir.path = "../sml-hir"
sml-path.path = "../sml-path"
str-util.workspace = true

[features]
sync = ["chain-map/sync"]
